// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (--rule-doc-title-format) uses desc format 1`] = `
"# Description of no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--rule-doc-title-format) uses desc format 2`] = `
"# Description of no-bar

💼 This rule is enabled in the following configs: 🌐 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

💭 This rule requires [type information](https://typescript-eslint.io/linting/typed-linting).

📝 Description of no-bar.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (--rule-doc-title-format) uses desc-parens-name format 1`] = `
"# Description of no-foo (\`no-foo\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--rule-doc-title-format) uses desc-parens-name format 2`] = `
"# Description of no-bar (\`no-bar\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

💭 This rule requires [type information](https://typescript-eslint.io/linting/typed-linting).

📝 Description of no-bar.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (--rule-doc-title-format) uses desc-parens-prefix-name format, with fallback when missing description 1`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--rule-doc-title-format) uses desc-parens-prefix-name format, with fallback when missing description 2`] = `
"# Description of no-bar (\`test/no-bar\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

💭 This rule requires [type information](https://typescript-eslint.io/linting/typed-linting).

📝 Description of no-bar.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (--rule-doc-title-format) uses name format 1`] = `
"# no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (--rule-doc-title-format) uses prefix-name format 1`] = `
"# test/no-foo

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;
